Updating regex search to accommodate windows paths

--- a/test_functs_TIFF_.ipynb
+++ b/test_functs_TIFF_.ipynb
@@ -69,7 +69,8 @@
    "source": [
     "# Get the year\n",
     "import re\n",
-    "fileName = re.findall(\".+(\\/.+)$\", dirpath)\n",
+    "fileName = re.findall(\".+(\\/.+)$\", dirpath)  # for non-windows based paths\n",
+    "fileName = re.findall(\".+(\\\\.+)$\", dirpath)  # for windows based paths\n",
     "year = fileName[0][1:5]"
    ]
   },
