excluding files which have '~' as prefix

--- a/test_functs_TIFF_.ipynb
+++ b/test_functs_TIFF_.ipynb
@@ -103,7 +103,7 @@
    "outputs": [],
    "source": [
     "fType = 'jpg' if \"JPG\" in dirpath else 'tiff'\n",
-    "sample = [dirpath+'/'+ x for x in content if fType in x]"
+    "sample = [dirpath+'/'+ x for x in content if fType in x and '~' not in x]"
    ]
   },
   {
