Adding initial sentence splitting

--- a/SentenceSplitting.ipynb
+++ b/SentenceSplitting.ipynb
@@ -30,13 +30,14 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import numpy as np\n",
+    "import re\n",
     "\n",
     "pd.set_option('display.max_colwidth', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b55b1c4b-ad16-4478-90ac-7be1b3b8aa99",
    "metadata": {
     "scrolled": true,
@@ -1202,13 +1203,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "fbcac79e-856a-449e-bffb-c80e72d9fff7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export the final dataframe to csv for viewing\n",
-    "df.to_csv(f\"{year}.csv\", index=False)"
+    "df_cleaned.to_csv(f\"{year}.csv\", index=False)"
    ]
   }
  ],
