Update to the final exported csv

--- a/SentenceSplitting.ipynb
+++ b/SentenceSplitting.ipynb
@@ -1224,14 +1224,197 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77376f41-ff13-4fc3-80f1-096880ede75f",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50b23a33-3387-4c9e-878e-3d3bf6e218dd",
+   "metadata": {},
+   "source": [
+    "## Exporting"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
+   "id": "8868dc63-5739-4345-bdb6-d3b558cc205b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>length</th>\n",
+       "      <th>start_page</th>\n",
+       "      <th>end_page</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>IK OF THE | GENERAL ASSEMBLY.</td>\n",
+       "      <td>31</td>\n",
+       "      <td>00035.jpg</td>\n",
+       "      <td>00035.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>OF THE STATE OF SOUTH CAROLINA Passed at the Regular Session which was begun and held at the City of Co- lumbia on the Eighth Day of January, A. D. 1961 and was adjourned without day on the Sicteenth day of February, A. D. 1901.</td>\n",
+       "      <td>228</td>\n",
+       "      <td>00035.jpg</td>\n",
+       "      <td>00035.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M. B. McSweeney, Governor.</td>\n",
+       "      <td>26</td>\n",
+       "      <td>00035.jpg</td>\n",
+       "      <td>00035.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jas. H. TittMan, Lieutenant- Governor and ex officio President of the Senate.</td>\n",
+       "      <td>77</td>\n",
+       "      <td>00035.jpg</td>\n",
+       "      <td>00035.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>W. F STEVENSON, Speaker of the House of Representatives Rorert R. HEMPHILL, Clerk of the Senate.</td>\n",
+       "      <td>96</td>\n",
+       "      <td>00035.jpg</td>\n",
+       "      <td>00035.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1473</th>\n",
+       "      <td>Approved the 2oth day of February, A. D. 1901 AN ACT To EMPOWER AND AUTHORIZE THE CouNnTY BoarD oF COMMISSIONERS OF CHEROKEE COUNTY TO BUILD A BRIDGE ACROSS BroAaD RIVER AND Borrow MONEY THERE- FOR FROM THE CoMMISSIONERS OF THE SINKING FUND.</td>\n",
+       "      <td>243</td>\n",
+       "      <td>00291.jpg</td>\n",
+       "      <td>00292.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1474</th>\n",
+       "      <td>SECTION 1. Be it enacted by the General Assembly of the State of South Carolina: That the County Board of Commis- sioners of Cherokee County be, and they are hereby, authorized, if in their discretion they deem that it is for the best interest of said County, to borrow a sum of money from the Sinking Fund of the State of South Carolina, not to exceed ten thousand dol- lars, at a rate of interest not to exceed five per centum per an- num, for the purpose of building a bridge across Broad River, in said County, at such point on said river as they may deem most practicable, and a special tax of one-half mill on the dollar may be levied on all taxable property in the County of Chero- kee, provided the Board of Commissioners so decide to build said bridge, for the said period of seven years, for the purpose of repaying said loan.</td>\n",
+       "      <td>836</td>\n",
+       "      <td>00292.jpg</td>\n",
+       "      <td>00292.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1475</th>\n",
+       "      <td>That the proceeds of said levy of one- half mill shall be paid each year on said loan until the seventh year, in which year the balance remaining due on said loan shall be paid from said special levy, if any remain it shall-be turned into the County Treasury for ordinary County purposes, and if a’sufficient sum has not been realized by said special levy at the expiration of said seven years the deficiency shall be paid by the County Board of Commissioners out of the ordinary County funds.</td>\n",
+       "      <td>493</td>\n",
+       "      <td>00292.jpg</td>\n",
+       "      <td>00292.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1476</th>\n",
+       "      <td>That the Commissioners of the Sinking Fund of the State of South Carolina are hereby authorized to lend to the County Board of Commissioners of Cherokee County out of the funds in their hands, the sum of ten thousand dollars, to be used for building said bridge, said sum to be secured by the special levy as herein provided for in Section one.</td>\n",
+       "      <td>344</td>\n",
+       "      <td>00292.jpg</td>\n",
+       "      <td>00292.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1477</th>\n",
+       "      <td>Approved the 2oth day of February, A. D. 1goI.</td>\n",
+       "      <td>46</td>\n",
+       "      <td>00292.jpg</td>\n",
+       "      <td>00292.jpg</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1478 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   sentence  \\\n",
+       "index                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         \n",
+       "0                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             IK OF THE | GENERAL ASSEMBLY.   \n",
+       "1                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      OF THE STATE OF SOUTH CAROLINA Passed at the Regular Session which was begun and held at the City of Co- lumbia on the Eighth Day of January, A. D. 1961 and was adjourned without day on the Sicteenth day of February, A. D. 1901.   \n",
+       "2                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                M. B. McSweeney, Governor.   \n",
+       "3                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             Jas. H. TittMan, Lieutenant- Governor and ex officio President of the Senate.   \n",
+       "4                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          W. F STEVENSON, Speaker of the House of Representatives Rorert R. HEMPHILL, Clerk of the Senate.   \n",
+       "...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     ...   \n",
+       "1473                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      Approved the 2oth day of February, A. D. 1901 AN ACT To EMPOWER AND AUTHORIZE THE CouNnTY BoarD oF COMMISSIONERS OF CHEROKEE COUNTY TO BUILD A BRIDGE ACROSS BroAaD RIVER AND Borrow MONEY THERE- FOR FROM THE CoMMISSIONERS OF THE SINKING FUND.   \n",
+       "1474   SECTION 1. Be it enacted by the General Assembly of the State of South Carolina: That the County Board of Commis- sioners of Cherokee County be, and they are hereby, authorized, if in their discretion they deem that it is for the best interest of said County, to borrow a sum of money from the Sinking Fund of the State of South Carolina, not to exceed ten thousand dol- lars, at a rate of interest not to exceed five per centum per an- num, for the purpose of building a bridge across Broad River, in said County, at such point on said river as they may deem most practicable, and a special tax of one-half mill on the dollar may be levied on all taxable property in the County of Chero- kee, provided the Board of Commissioners so decide to build said bridge, for the said period of seven years, for the purpose of repaying said loan.   \n",
+       "1475                                                                                                                                                                                                                                                                                                                                                          That the proceeds of said levy of one- half mill shall be paid each year on said loan until the seventh year, in which year the balance remaining due on said loan shall be paid from said special levy, if any remain it shall-be turned into the County Treasury for ordinary County purposes, and if a’sufficient sum has not been realized by said special levy at the expiration of said seven years the deficiency shall be paid by the County Board of Commissioners out of the ordinary County funds.   \n",
+       "1476                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               That the Commissioners of the Sinking Fund of the State of South Carolina are hereby authorized to lend to the County Board of Commissioners of Cherokee County out of the funds in their hands, the sum of ten thousand dollars, to be used for building said bridge, said sum to be secured by the special levy as herein provided for in Section one.   \n",
+       "1477                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         Approved the 2oth day of February, A. D. 1goI.   \n",
+       "\n",
+       "       length start_page   end_page  \n",
+       "index                                \n",
+       "0          31  00035.jpg  00035.jpg  \n",
+       "1         228  00035.jpg  00035.jpg  \n",
+       "2          26  00035.jpg  00035.jpg  \n",
+       "3          77  00035.jpg  00035.jpg  \n",
+       "4          96  00035.jpg  00035.jpg  \n",
+       "...       ...        ...        ...  \n",
+       "1473      243  00291.jpg  00292.jpg  \n",
+       "1474      836  00292.jpg  00292.jpg  \n",
+       "1475      493  00292.jpg  00292.jpg  \n",
+       "1476      344  00292.jpg  00292.jpg  \n",
+       "1477       46  00292.jpg  00292.jpg  \n",
+       "\n",
+       "[1478 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add a label for each row\n",
+    "df_cleaned = df_cleaned.assign(index=range(len(df_cleaned)))\n",
+    "df_cleaned.set_index('index', inplace=True)\n",
+    "df_cleaned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "fbcac79e-856a-449e-bffb-c80e72d9fff7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export the final dataframe to csv for viewing\n",
-    "df_cleaned.to_csv(f\"{year}.csv\", index=False)"
+    "df_cleaned.to_csv(f\"{year}.csv\", index=True)"
    ]
   }
  ],
