Adding better descriptions

--- a/SentenceSplitting.ipynb
+++ b/SentenceSplitting.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "id": "2409e4ce-2e4f-4029-ae7c-842dfa3294a8",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -45,7 +44,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = 1892"
+    "year = 1892\n",
+    "\n",
+    "# This is the directory that will contain the OCRed output:\n",
+    "dir_OCR = \"/Users/nitingupta/Desktop/OTB/OCRed\" + str(year)"
    ]
   },
   {
@@ -58,11 +60,9 @@
    },
    "outputs": [],
    "source": [
-    "direc = \"../OCRed/\" + str(year)\n",
-    "\n",
     "# Try reading in \"{year}_text.txt\" if the Acts and Joints were seperate for the year\n",
     "try:\n",
-    "    acts_path = direc + \"/\" + str(year) + \"_Acts.txt\"\n",
+    "    acts_path = dir_OCR + \"/\" + str(year) + \"_Acts.txt\"\n",
     "    with open(acts_path, 'r') as f:\n",
     "        data = f.read()\n",
     "\n",
@@ -72,7 +72,7 @@
     "# However, if the directory contains {year}_Both.txt instead, a FileNotFoundError will be returned for the above code.\n",
     "# So, catch that error and read in \"{year}_Both.txt\"\n",
     "except FileNotFoundError:\n",
-    "    acts_path = direc + \"/\" + str(year) + \"_Both.txt\"\n",
+    "    acts_path = dir_OCR + \"/\" + str(year) + \"_Both.txt\"\n",
     "    with open(acts_path, 'r') as f:\n",
     "        data = f.read()\n",
     "    \n",
@@ -198,9 +198,11 @@
     }
    ],
    "source": [
-    "imgs_path = direc + \"/images\"\n",
+    "# This is the path to the directory that contains the images.\n",
+    "# NOTE: This directory is inside the OCRed output for the chosen year\n",
+    "dir_imgs = dir_OCR + \"/images\"\n",
     "\n",
-    "imgs = os.listdir(imgs_path)\n",
+    "imgs = os.listdir(dir_imgs)\n",
     "imgs = [img for img in imgs if \"jpg\" in img or \"tiff\" in img or \"JPG\" in img or \"TIFF\" in img]\n",
     "imgs.sort()\n",
     "print(\"The number of image files for this year is:\", len(imgs))"
@@ -301,7 +303,7 @@
     "nameLen = len(imgs[0].split(\".\")[0])\n",
     "\n",
     "# Read in CopyofImageCorpusMetadata.xlsx to a pandas frame\n",
-    "# The file needs to be in THE SAME direcotry as this file.\n",
+    "# The file needs to be in THE SAME direcotry as this ipynb file.\n",
     "corpusMetaPath = \"./Copy of ImageCorpusMetadata.xlsx\"\n",
     "corpusMeta = pd.read_excel(corpusMetaPath)\n",
     "\n",
@@ -707,10 +709,11 @@
     }
    ],
    "source": [
+    "# Based on whether the Acts and Joints are mixed, read the appropriate tsv file\n",
     "if actsSep:\n",
-    "    df_words = pd.read_table(f\"{direc}/{year}_Acts_data.tsv\")\n",
+    "    df_words = pd.read_table(f\"{dir_OCR}/{year}_Acts_data.tsv\")\n",
     "else:\n",
-    "    df_words = pd.read_table(f\"{direc}/{year}_Both_data.tsv\")\n",
+    "    df_words = pd.read_table(f\"{dir_OCR}/{year}_Both_data.tsv\")\n",
     "\n",
     "df_words"
    ]
