Updating sentence splitting

--- a/split_cleanup/SentenceSplitting.ipynb
+++ b/split_cleanup/SentenceSplitting.ipynb
@@ -70,7 +70,7 @@
    "source": [
     "# If running this notebook independently,\n",
     "# Uncoment the following line of code\n",
-    "year = 1901"
+    "# year = 1901"
    ]
   },
   {
