Adding more Regex matches

--- a/split_cleanup/SentenceSplitting.ipynb
+++ b/split_cleanup/SentenceSplitting.ipynb
@@ -7,8 +7,8 @@
     "tags": []
    },
    "source": [
-    "# Sentence Tokenization\n",
-    "This notebook transforms "
+    "# Sentence Splitting\n",
+    "This notebook uses OCRed text for a volume year and splits it into sentences using regular expression pattern matching."
    ]
   },
   {
