--- a/split_cleanup/SentenceSplitting.ipynb
+++ b/split_cleanup/SentenceSplitting.ipynb
@@ -2593,6 +2593,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "afe84cd5-24b7-448c-8809-5abdce9ee4c9",
+   "metadata": {},
+   "source": [
+    "<b>Note:</b> If the above table is empty, it might help in decreasing the ratio parameter in `upperIfNeeded` above."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "id": "40ef15ae-ae9c-4ce4-a47d-940d64cbd519",
@@ -2609,7 +2617,10 @@
     }
    ],
    "source": [
-    "uppercased = df_cleaned['flag'].value_counts()[True]\n",
+    "if not df_cleaned[df_cleaned['flag'] == True].empty:\n",
+    "    uppercased = df_cleaned['flag'].value_counts()[True]\n",
+    "else:\n",
+    "    uppercased = 0\n",
     "print(f\"Total number of sentences changed to uppercase: {uppercased}.\")\n",
     "\n",
     "errorsDict['Uppercased'] = uppercased"
@@ -2656,7 +2667,7 @@
    "id": "8cf58f98-1863-4a3e-bc95-721b42724cfd",
    "metadata": {},
    "source": [
-    "Otherwise, you can change the ratio parameter in `upperIfNeeded` function's argument to either increase the number (if you think sentences which shouldn't be uppercased are being uppercased) or decrease (if you think sentences could be uppercased)."
+    "Otherwise, you can change the ratio parameter in `upperIfNeeded` function to either increase the number (if you think sentences which shouldn't be uppercased are being uppercased) or decrease (if you think more sentences could be uppercased)."
    ]
   },
   {
