--- a/split_cleanup/AggSplitting.ipynb
+++ b/split_cleanup/AggSplitting.ipynb
@@ -78,7 +78,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processed the list: 100%|█████████████████████████████████████████████████████████████████████████| 6/6 [00:16<00:00,  2.81s/it]\n"
+      "Processed the list: 100%|█████████████████████████████████████████████████████████████████████████| 6/6 [00:10<00:00,  1.82s/it]\n"
      ]
     }
    ],
@@ -356,6 +356,51 @@
    ],
    "source": [
     "df_final"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Checking and dropping for duplicates\n",
+    "There is a high possibility for duplicates to exist in the sentence column. This is removed here, intead of in `SentenceSplitting.ipynb`, because there might be duplicates across different volumes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of dropped sentences is: 831\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The number of dropped sentences is: {df_final[df_final.duplicated(subset=['sentence'])].shape[0]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df_final.drop_duplicates(subset=['sentence'], ignore_index=True, inplace=True)"
    ]
   }
  ],
