--- a/split_cleanup/AggSplitting.ipynb
+++ b/split_cleanup/AggSplitting.ipynb
@@ -389,7 +389,7 @@
     }
    ],
    "source": [
-    "print(f\"The number of dropped sentences is: {df_final[df_final.duplicated(subset=['sentence'])].shape[0]}\")"
+    "print(f\"The number of dropped sentences is {df_final[df_final.duplicated(subset=['sentence'])].shape[0]}\")"
    ]
   },
   {
